tests/rascal/negative/name_errors/L3/7_no-proc3.ob
MODULE Bla;

TYPE
  f = INTEGER;

BEGIN
  f()
END Bla.